fixed overflow when paralax used

--- a/assets/css/bbcinema.css
+++ b/assets/css/bbcinema.css
@@ -102,6 +102,10 @@ caption {
   height: 100vh;
 }
 
+/* Fix for mouse over paralax effect */
+.hideIt {
+overflow: hidden;
+}
 /* TABLE */
 .table {
   text-align: center;
